# Long_Insight

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: demo_dag_256k_12-15.html  demo_dag_sonnet_12-09.html  demo_dag_sonnet_12-11.html  demo_dag_sonnet_12-12.html  demo_dag_sonnet_12-15.html  demo_dag_test.html  demo_steps.json  demo_steps_256k.jsonl  sample_trajectory.jsonl
long_insight/: __init__.py  cli.py  config.py
long_insight/analyzer/: compressor.py  decomposer.py  prompts.py
long_insight/evaluator/: prompts.py  scorer.py
long_insight/llm/: client.py
long_insight/visualizer/: charts.py  dag.py
